More style added

--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 </head>
 <body>
     <header>
-        <h2>John Mark Manuel</h2>
-        <p>WDD 330 Portfolio</p>
+        <h1>John Mark Manuel</h1>
+        <h2>WDD 330 Portfolio</h2>
     </header>
     <main>
         <ol class="directory"></ol>
