--- a/w2/index.html
+++ b/w2/index.html
@@ -5,13 +5,19 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Week 2</title>
+
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
-    <h1>WDD 330 Portfolio</h1>
-    <h3>Week 02</h3>
-    <ul>
-        <li><a href="notes.html">Week 2 Notes</a></li>
-        <li><a href="../quiz/index.html">Quiz Ninja</a></li>
-    </ul>
+    <header>
+        <h1>WDD 330 Portfolio</h1>
+        <h2>Week 02</h2>
+    </header>
+    <main>
+        <ul>
+            <li><a href="notes.html">Week 2 Notes</a></li>
+            <li><a href="../quiz/index.html">Quiz Ninja</a></li>
+        </ul>
+    </main>
 </body>
 </html>
