--- a/quiz/index.html
+++ b/quiz/index.html
@@ -8,12 +8,17 @@
     </head>
     <body>
         <section class='dojo'>
-        <div class='quiz-body'>
-            <header>
-            <h1>Quiz Ninja!</h1>
-            </header>
-        </div>
+            <div class='quiz-body'>
+                <header>
+                    <div id='score'>Score: <strong>0</strong></div>
+                    <h1>Quiz Ninja!</h1>
+                    <button id='start'>Click to Start</button>
+                </header>
+                <div id='question'></div>
+                <div id='result'></div>
+                <div id='info'></div>
+            </div>
         </section>
-    <script src='js/quiz.js'></script>
+        <script src='js/quiz.js'></script>
     </body>
 </html>
