--- a/w3/index.html
+++ b/w3/index.html
@@ -17,6 +17,7 @@
         <ul>
             <li><a href="notes.html">Week 3 Notes</a></li>
             <li><a href="../quiz/index.html">Quiz Ninja</a></li>
+            <li><a href="count.html">Bean Counting Challenge</a></li>
         </ul>
     </main>
 </body>
