--- a/w2/index.html
+++ b/w2/index.html
@@ -17,6 +17,7 @@
         <ul>
             <li><a href="notes.html">Week 2 Notes</a></li>
             <li><a href="../quiz/index.html">Quiz Ninja</a></li>
+            <li><a href="count.html">Counting Beans Challenge</a></li>
         </ul>
     </main>
 </body>
