--- a/w5/index.html
+++ b/w5/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Borrowing a Method</title>
+    <title>The Locked Box</title>
 </head>
 <body>
-    <h1>Borrowing a Method</h1>
+    <h1>The Locked Box</h1>
     <p>See the console</p>
     <script src="js/main.js"></script>
 </body>
