--- a/ch1/index.html
+++ b/ch1/index.html
@@ -10,21 +10,23 @@
     <script src="main.js" defer></script>
 </head>
 <body>
-    <h1>To Do List</h1>
-    <div class="list">
-		<ul id="addlist">
+    <main>
+        <h1>To Do List</h1>
+        <div class="list">
+            <ul id="addlist">
 
-		</ul>
-        <div>
-            <span id="status"></span>
-            <button type="button" id="all">All</button>
-            <button type="button" id="active">Active</button>
-            <button type="button" id="completed">Completed</button>
+            </ul>
+            <div class="info">
+                <span id="status"></span>
+                <button type="button" id="all">All</button>
+                <button type="button" id="active">Active</button>
+                <button type="button" id="completed">Completed</button>
+            </div>
         </div>
-	</div>
-    <div class="input">
-		<input type="text" id="item">
-		<button type="button" id="addbtn">➕</button>
-	</div>
+        <div class="input">
+            <input type="text" id="item">
+            <button type="button" id="addbtn">➕</button>
+        </div>
+    </main>
 </body>
 </html>
