--- a/ch1/index.html
+++ b/ch1/index.html
@@ -7,7 +7,7 @@
     <title>Challenge One: Todo</title>
 
     <link rel="stylesheet" href="style.css">
-    <script src="main.js" defer></script>
+    <script src="main.js" type="module" defer></script>
 </head>
 <body>
     <main>
