--- a/ch1/index.html
+++ b/ch1/index.html
@@ -27,9 +27,9 @@
                 </div>
             </div>
             <div class="footer">
+                <div id="error"></div>
                 <input type="text" id="item" placeholder="Enter New Task Here">
                 <button type="button" id="addbtn">➕</button>
-                <span id="error"></span>
             </div>
         </div>
     </main>
