--- a/w9/index.html
+++ b/w9/index.html
@@ -2,16 +2,13 @@
 <html lang='en'>
 <head>
   <meta charset='utf-8'>
-  <title>Websocket Example</title>
+  <title>Geolocation</title>
 </head>
 <body>
-  <h2>Web Socket Example</h2>
-  <form>
-    <label for='message'>Enter a Message:</label>
-    <input type='text' name='message'>
-    <button type='submit'>Submit</button>
-  </form>
-  <div id='output'></div>
+  <h2>Geolocation</h2>
+  <div>
+    You are currently here: <span id="location"></span>
+  </div>
   <script src='main.js'></script>
 </body>
 </html>
